--- a/1009_자료구조 퀴즈_의진.md
+++ b/1009_자료구조 퀴즈_의진.md
@@ -20,7 +20,7 @@
 
 - 자료구조 사용법과 메서드 
 
-![image-20211009184947426](자료구조 퀴즈.assets/image-20211009184947426.png)
+![image-20211009184947426](photo/image-20211009184947426.png)
 
 
 
@@ -103,7 +103,7 @@ https://www.daleseo.com/python-priority-queue/
 
 https://ninefloor-design.tistory.com/154 (정리표참고)
 
-![image-20211009184924221](자료구조 퀴즈.assets/image-20211009184924221.png)
+![image-20211009184924221](photo/image-20211009184924221.png)
 
 
 
@@ -146,5 +146,4 @@ card_text = "hello, world!"
 # >>> e 의 인덱스를 구하세요.
 print(card_text.find("e"))
 ```
-
 
