--- a/1009_자료구조 퀴즈_성일.md
+++ b/1009_자료구조 퀴즈_성일.md
@@ -86,7 +86,7 @@ f(n)은 O(g(n)) 이라고 한다.
 
 ![image-20211017000523051](photo/image-20211017000523051.png)
 
-예를 들어, `2n+10`이 `O(n)`임을 증명한는 과정은 아래와 같다.
+예를 들어, `2n+10`이 `O(n)`임을 증명하는 과정은 아래와 같다.
 
 ```
 2n + 10 <= cn
